# hdf5_sandbox

./: FindHDF5.cmake  README.md  setup.sh
nsw/: CMakeLists.txt
nsw/src/: main_compound.cxx  main_inspect.cxx
